# 0.00.09 (44322) Sep 22, 2010
9/22/10 use the same exponent for bar meter value and label, with max label format 10x10^N [44320]
# 0.00.08 (44318) Sep 22, 2010
9/22/10 use the same exponent for bar meter value and label, with max label format 1x10^N [44316]
# 0.00.07 (44315) Sep 22, 2010
9/22/10 remove tool tip and flashing max label from bar meters
# 0.00.06 (44263) Sep 21, 2010
9/21/10 dev version to discuss scale button on bar meters
9/21/10 use + and - magnifying glass images to indicate what the meter scale button will do
9/21/10 new images for the meter scale button, enable/disable button as appropriate
9/21/10 add ticks outside the bar meter track for min and max labels
9/21/10 add tooltip to meter scale button
9/21/10 add scale button to bar meters, flash max range label when it changes
9/21/10 move meter nodes to new capacitorlab.view.meters package
9/7/10 fixed plate area drag handler, use only x drag coordinate because y dimension is foreshortened for pseudo-3D perspective
9/7/10 resolve ordering problem with plate area drag handle offset
9/7/10 doc and consolidate duplicate code in BoxNode
9/7/10 replace EasyGridBagLayout with GridPanel throughout
9/7/10 created GridPanel, will test it here than migrate to phetcommon
9/2/10 move all drag code to new capacitorlab.drag package
9/2/10 make dielectric directly draggable, use same handler as drag arrow 
9/2/10 promote drag handlers from inner classes to top-level types
8/31/10 move "Model Values" check box to Developer Controls panel
8/31/10 migrate ColoredSeparator to phetcommon
8/31/10 replace borders with separators in subpanels
8/31/10 replace CLTitledControlPanel with PhetTitledPanel
8/26/10 add stubs for Multiple Capacitors tab
7/9/10 attempt to fix plate area drag handle, still broken
7/9/10 move model listener responsibilities into drag handle nodes
7/9/10 fix drag handles for dielectric offset and plate separation 
7/8/10 add overload indicator to bar meters